# behavysis-viewer

./: .gitignore  .prettierignore  README.md  electron.vite.config.ts  eslint.config.mjs  explainer.html  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  tsconfig.json  tsconfig.node.json  tsconfig.web.json  vite.config.ts
.opencode/: AGENTS.md
docs/: deepseek_style_implementation.md  fix_vidreader1.md  fix_vidreader2.md  fix_vidreader_principle.md  glm_style_implementation.md  overall_implementation.md  restructure-spec.md  review.md  simplify1.md
example_analysis/0_config/: VIDEO_002.json
example_analysis/6_predicted_behavs/: VIDEO_002.parquet
example_analysis/7_scored_behavs/: VIDEO_002.parquet
recommendations/: combined.md  deepseek_recommendations.md  glm_recommendations.md  kimi_recommendations.md  review.md
src/: App.tsx  main.tsx  store.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: BoutInspector.tsx  BoutTimeline.tsx  BoutsPanel.tsx  ErrorBoundary.tsx  FeatureGraph.tsx  MenuBar.tsx  VideoPane.tsx
src/components/playback/: PlaybackSettingsPopover.tsx  TimelineSlider.tsx
src/hooks/: useExperimentIO.ts  useKeyboardShortcuts.ts
src/lib/: fileManager.ts  frameReader.ts  parquetIO.ts
src/main/: index.ts  ipc.ts
src/main/lib/: colors.ts  columnNames.ts  parquetUtils.ts  parseBehav.ts  parseFeatures.ts  parseKeypoints.ts  saveBehav.ts
src/preload/: index.ts
src/renderer/: index.html
src/shared/: behavysisContract.ts  types.ts
(+39 files in other folders)
